# Lab1

./: CMakeLists.txt  helpFuncs.cpp  helpFuncs.h  lab_1.h  main.cpp  treeTOlist.cpp
Commands/: arrCommands.cpp  arrCommands.h  hashCommands.cpp  hashCommands.h  listCommands.cpp  listCommands.h  queueCommands.cpp  queueCommands.h  slistCommands.cpp  slistCommands.h  stackCommands.cpp  stackCommands.h  treeCommands.cpp  treeCommands.h
Structures/: ComplTree.cpp  ComplTree.h  MyQueue.cpp  MyQueue.h  Stack.cpp  Stack.h  arr.cpp  hashMap.cpp  hashMap.h  queue.cpp  queue.h  singleList.cpp  singleList.h
